--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,400&family=Fira+Code&family=Merriweather:ital,wght@0,400;0,700;0,900;1,900&family=Poppins:wght@300;600&family=Roboto:ital,wght@0,300;0,400;0,900;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,400&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Merriweather:ital,wght@0,400;0,700;0,900;1,900&family=Noto+Serif:ital,wght@0,100;0,300;0,400;0,500;0,900;1,100;1,300;1,900&family=Poppins:wght@300;600&family=Roboto:ital,wght@0,300;0,400;0,900;1,900&display=swap" rel="stylesheet">
     <title>Vite + React</title>
   </head>
   <body>
