--- a/client/index.html
+++ b/client/index.html
@@ -10,27 +10,9 @@
 			href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,400&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Merriweather:ital,wght@0,400;0,700;0,900;1,900&family=Noto+Serif:ital,wght@0,100;0,300;0,400;0,500;0,900;1,100;1,300;1,900&family=Poppins:wght@300;600&family=Roboto:ital,wght@0,300;0,400;0,900;1,900&display=swap"
 			rel="stylesheet"
 		/>
-		<title>Vite + React</title>
+		<title>Cooked</title>
 	</head>
 	<body>
-		<script type="text/javascript">
-			(function (l) {
-				if (l.search[1] === "/") {
-					var decoded = l.search
-						.slice(1)
-						.split("&")
-						.map(function (s) {
-							return s.replace(/~and~/g, "&");
-						})
-						.join("?");
-					window.history.replaceState(
-						null,
-						null,
-						l.pathname.slice(0, -1) + decoded + l.hash
-					);
-				}
-			})(window.location);
-		</script>
 		<div id="root"></div>
 		<script type="module" src="/src/index.jsx"></script>
 	</body>
